// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CertificateAuthority /> authority is ready should render component 1`] = `
<div>
  <h3>
    Certificate Authority
  </h3>
  <p>
    Your certificate authority (CA) is set up properly. Please note that if you delete it all clients will have their access revoked.
  </p>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    type="button"
  >
     
     
    Delete CA
  </button>
</div>
`;

exports[`<CertificateAuthority /> should render error 1`] = `
<div>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<CertificateAuthority /> should render missing component 1`] = `
<div>
  <h3>
    No certification authority
  </h3>
  <p>
    Currently there is no certificate authority (CA) dedicated to remote access. A CA is required to generate access tokens to authenticate. To proceed you need to generate it first.
  </p>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    type="button"
  >
     
     
    Generate CA
  </button>
</div>
`;

exports[`<CertificateAuthority /> should render spinner 1`] = `
<div>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border "
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
    <div
      class="spinner-text"
    />
  </div>
</div>
`;
